fixed spacing issue

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -39,6 +39,9 @@ body {
   min-height: 100vh;
   font-family: Latto-Regular !important;
 }
+.izyXuO {
+  overflow-x: hidden !important;
+}
 
 .sidebar-container {
   .sidebar {
